--- a/tags-formulario.html
+++ b/tags-formulario.html
@@ -11,5 +11,18 @@
     <p>Um label e um input aqui:</p>
     <p>E um botão para terminar!</p>
 
+    <form action="#">
+        <label for="nome-completo">Nome</label>
+        <input type="text" id="nome-completo">
+        <br>
+        <label for="e-mail">Email</label>
+        <input type="text" name="" id="e-mail">
+        <br>
+        <label for="idade">Idade</label>
+        <input type="number" name="" id="idade">
+        <br>
+        <button type="submit">Inscreva-se</button>
+    </form>
+
 </body>
 </html>
