--- a/fixacao/contato.html
+++ b/fixacao/contato.html
@@ -10,13 +10,21 @@
 </head>
 
 <body>
-    <div class="um">
-        <h1>Header</h1>
-    </div>
-    <div class="dois">
-        
-    </div>
-    <div class="seis">Footer</div>
+    <header class="um">
+        <a href="./index.html"><h1>Contato</h1></a>
+    </header>
+    <main class="dois">
+        <form action="">
+       <label for="nome">Nome</label> 
+       <input type="text" id="nome">
+       <label for="telefone">Telefone</label>
+       <input type="text" id="telefone">
+       <label for="noticia">Noticia</label>
+       <input type="text" id="noticia">
+       <button type="submit">Enviar Noticia</button>
+    </form>
+    </main>
+    <footer class="seis">Footer</footer>
 
 </body>
 
